# 3D-segmentation-tracking

./: CMakeLists.txt  README.md  Term_Project.cpp  Term_Project.h  main.cpp
dataset/: frame-000000.depth.pgm  frame-000000.pose.txt  frame-000001.depth.pgm  frame-000001.pose.txt  frame-000002.depth.pgm  frame-000002.pose.txt  frame-000003.depth.pgm  frame-000003.pose.txt  frame-000004.depth.pgm  frame-000004.pose.txt  frame-000005.depth.pgm  frame-000005.pose.txt  frame-000006.depth.pgm  frame-000006.pose.txt  frame-000007.depth.pgm  frame-000007.pose.txt  frame-000008.depth.pgm  frame-000008.pose.txt  frame-000009.depth.pgm  frame-000009.pose.txt  frame-000010.depth.pgm  frame-000010.pose.txt
